﻿shmuel 03.06.2014 22:53:34 +0200 - build 361

1. Поле 'key' в спецификации макроса сделано опциональным.

shmuel 03.06.2014 20:47:06 +0200 - build 360

1. Fix 359.

shmuel 03.06.2014 20:14:25 +0200 - build 359

1. Рефакторинг.

shmuel 02.06.2014 18:16:01 +0200 - build 358

1. Рефакторинг.

shmuel 02.06.2014 00:18:56 +0200 - build 357

1. Рефакторинг.

shmuel 01.06.2014 16:49:47 +0200 - build 356

1. В диалоге редактирования клавиатурного макроса не детектировались синтактические ошибки в параметрах файла-скрипта.

2. MSSC_POST: устранён двойной парсинг.

3. Рефакторинг.

shmuel 31.05.2014 21:22:42 +0200 - build 355

1. Продолжение 353: теперь не только не падаем, но и выполняем скрипт из архива по ассоциации
   (раньше выдавалось сообщение об ошибке, т.к. на момент запуска макроса временный файл уже был удалён).

shmuel 31.05.2014 17:32:08 +0200 - build 354

1. Рефакторинг.

shmuel 29.05.2014 21:10:14 +0200 - build 353

1. Фар падал при выдаче плагином сообщения об ошибке при запуске скрипта из архива по ассоциации
   lua:@"!\!.!"

shmuel 29.05.2014 09:27:11 +0200 - build 352

1. M#2389: mmode(1,x): Вывод на экран включается/отключается не вовремя.

shmuel 28.05.2014 13:00:02 +0200 - build 351

1. LuaFAR: M#2674: Возврат хэндла панели при работе из макроса - поддержка для LuaFAR-плагинов.

shmuel 28.05.2014 12:52:34 +0200 - build 350

1. Плагин падал при начальной загрузке макросов, если на package.cpath
   находилась lpeg.dll версии 0.10 при том, что в %farhome% была версия 0.12.

shmuel 26.05.2014 20:20:14 +0200 - build 349

1. Завершение рефакторинга, начатого в 332.

shmuel 25.05.2014 21:14:54 +0200 - build 348

1. Продолжение 332.

shmuel 25.05.2014 18:17:51 +0200 - build 347

1. Продолжение 332.

shmuel 24.05.2014 20:09:27 +0200 - build 346

1. Починим вложенные макросы.

shmuel 24.05.2014 17:26:49 +0200 - build 345

1. Продолжение 332.

shmuel 24.05.2014 00:37:50 +0200 - build 344

1. Уточнение 343.

shmuel 23.05.2014 19:52:47 +0200 - build 343
